# creditcard-fraud-detection

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
dashboard/: app.py
models/: calibrated_threshold_config.json  final_tuned_threshold.json  oof_tuned_threshold.json  threshold_config.json  tuned_threshold_config.json
notebooks/: 01_data_understanding.ipynb  02_data_cleaning.ipynb  03_exploratory_data_analysis.ipynb  04_feature_engineering.ipynb  05_baseline_modelling.ipynb  06_model_comparison.ipynb  07_threshold_optimization.ipynb  08_business_cost_simulation.ipynb  09_advanced_tuning.ipynb
scripts/: calibrate_model.py  evaluate_out_of_time.py  explain_model.py  finalize_tuned_model.py  monitor_drift.py  optimize_threshold.py  package_streamlit_artifacts.py  predict_transactions.py  promote_tuned_model.py  refresh_active_policy.py  run_eda.py  train_anomaly_detection.py  train_baseline.py  train_model_comparison.py  tune_advanced_models.py  tune_boosting_ensemble.py
src/fraud_detection/: __init__.py  config.py  data.py  evaluation.py  feature_engineering.py  features.py  modeling.py  monitoring.py  policy_reports.py  prediction.py  risk.py  threshold.py
tests/: test_data.py  test_evaluation_modeling.py  test_feature_monitoring_prediction.py  test_risk_threshold.py
