[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-detection-risk-scoring"
version = "0.1.0"
description = "Credit-card fraud detection and transaction risk-scoring project"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "scikit-learn>=1.4,<2",
  "imbalanced-learn>=0.12,<1",
  "matplotlib>=3.8,<4",
  "seaborn>=0.13,<1",
  "joblib>=1.3,<2",
  "streamlit>=1.40,<2",
  "xgboost>=2.1,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: tests that require generated model/data artifacts",
]

[tool.setuptools.packages.find]
where = ["src"]
